# palconnect

./: .dockerignore  .editorconfig  .env.example  .gitignore  Cargo.toml  Config.toml.example  Dockerfile  README.md  build.yaml  snapcraft.yaml
.do/: app.yaml
.github/ISSUE_TEMPLATE/: release.md
.github/workflows/: build-canary.yaml  build.yaml  deploy.yaml  manual-release.yaml  publish.yaml  testing.yaml
.updater/: latest.json
docs/: RELEASE.md  SERVICE_MANAGEMENT.md  SIGNING.md  TRAIT_BASED_SERVICES.md
examples/: README.md  com.palworld.server.plist  custom_service_providers.rs  docker-server-control.sh  setup-launchd.sh  setup-systemd.sh  setup-windows-service.ps1
initd/: README.md  install.sh  palconnect  palconnect.env.example  uninstall.sh
scripts/: mockoon.json  test_api.sh
src/: config.rs  glance.rs  health_check.rs  main.rs  service.rs  service_manager.rs  service_providers.rs
src/commands/: about.rs  admin_commands.rs  help.rs  mod.rs  players.rs  server_info.rs  start_stop.rs  test_status.rs
systemd/: README.md  install.sh  palconnect.env.example  palconnect.service  test-service.sh  uninstall.sh
