[package]
name = "palconnect"
authors = ["Lily Ana Valley <hi@lilyvalley.dev>"]
version = "0.1.0"
edition = "2024"

[dependencies]
poise = "0.6"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
actix-web = "4.11"
tracing = "0.1"
tracing-subscriber = "0.3"
