[package]
name = "palconnect"
authors = ["Lily Ana Valley <hi@lilyvalley.dev>"]
version = "0.6.0"
edition = "2024"

[dependencies]
poise = "0.6"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal"] }
tokio-util = "0.7"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.8"
dotenv = "0.15"
cargo-packager = { version = "0.11.7", default-features = false }
cargo-packager-updater = "0.2.3"
actix-web = "4.11"
chrono = "0.4.42"
log = "0.4.28"
fern = "0.7"
clap = { version = "4.0", features = ["derive"] }

[target.'cfg(unix)'.dependencies]
syslog = "7.0.0"
fork = "0.3.0"

[package.metadata.packager]
product-name = "PalConnect"
name = "palconnect"
description = "Community bridge between Discord and PalWorld"
category = "Utility"
homepage = "https://github.com/lilyanavalley/palconnect"
identifier = "dev.lilyvalley.palconnect"
copyright = "Lily Valley, 2025 under AGPL-3-or-later"
license-file = "./COPYING.md"
authors = ["Lily Ana Valley <hi@lilyvalley.dev>"]

before-packaging-command = "cargo build --release"

formats = [
    "dmg",
    "wix", 
    "deb"
]

resources = [
    "Cargo.toml",
    "COPYING.md",
    "README.md",
    "Dockerfile",
    ".dockerignore",
    ".env.example",
    ".editorconfig",
    "src/",
    "scripts/",
    "docs/",
]

# [package.metadata.packager.deb]
# files = ["sytemd/"]
